[project]
name = "blood-pressure-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mateusz Kuniczuk", email = "matiusz98@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "streamlit>=1.57.0",
]

[project.scripts]
blood-pressure-analyzer = "blood_pressure_analyzer.__main__:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

