[project]
name = "blood-pressure-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mateusz Kuniczuk", email = "matiusz98@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pandera[pandas]>=0.24.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "streamlit>=1.58.0",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "prek>=0.4.4",
    "ruff>=0.15.16",
]
